--- a/imgplot_to_array.ipynb
+++ b/imgplot_to_array.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "colormap = plt.colormaps['hot'].copy()\n",
     "# Extract the colors from the original colormap\n",
-    "colors = colormap(np.linspace(0, 1, hot_blue.N))\n",
+    "colors = colormap(np.linspace(0, 1, colormap.N))\n",
     "# Modify the last colors to match overbound colors in image\n",
     "colors[-2] = (0.4,0,0.6,1)\n",
     "colors[-1] = (0.1,0,0.6,1)\n",
