--- a/imgplot_to_array.ipynb
+++ b/imgplot_to_array.ipynb
@@ -121,7 +121,12 @@
     "col1 = 96\n",
     "x2 = 2\n",
     "col2 = 457\n",
-    "x_axis = generate_x_axis_map((col1, x1), (col2, x2), img_vals)"
+    "x_axis = generate_x_axis_map((col1, x1), (col2, x2), img_vals)\n",
+    "\n",
+    "# # Example syntax for non-linear x axis:\n",
+    "# x_indices = [  32, 100, 168, 211, 239, 268, 297, 328, 359]\n",
+    "# x_coords =  [-0.5,   0, 0.5, 0.8, 1.0, 1.2, 1.4, 1.6, 1.8]\n",
+    "# x_axis = generate_arb_x_axis_map(x_indices, x_coords, img_vals)"
    ]
   },
   {
@@ -143,7 +148,12 @@
     "row1 = 22\n",
     "y2 = 0\n",
     "row2 = 384\n",
-    "y_axis = generate_y_axis_map((row1, y1), (row2, y2), img_vals)"
+    "y_axis = generate_y_axis_map((row1, y1), (row2, y2), img_vals)\n",
+    "\n",
+    "# # Example syntax for non-linear y axis:\n",
+    "# y_indices = [ 16,  50,  83, 113, 143, 172, 201, 229, 257, 284, 311]\n",
+    "# y_coords =  [2.2, 2.0, 1.8, 1.6, 1.4, 1.2, 1.0, 0.8, 0.6, 0.4, 0.2]\n",
+    "# y_axis = generate_arb_y_axis_map(y_indices, y_coords, img_vals)"
    ]
   },
   {
@@ -168,7 +178,19 @@
     "           norm=matplotlib.colors.Normalize(vmin=img_min, vmax=img_max),\n",
     "           # norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_array, 50), vmax=np.percentile(img_array, 99.9)),\n",
     "           cmap='turbo',\n",
-    "           extent=(np.min(x_axis), np.max(x_axis), np.min(y_axis), np.max(y_axis)))"
+    "           extent=(np.min(x_axis), np.max(x_axis), np.min(y_axis), np.max(y_axis)))\n",
+    "\n",
+    "\n",
+    "# # For plotting non-linearly spaced x and y axes with pcolormesh:\n",
+    "# fig,ax1 = subplots(1,1)\n",
+    "# X, Y = np.meshgrid(x_axis, y_axis)\n",
+    "# ax1.pcolormesh(\n",
+    "#     X, Y,\n",
+    "#     img_vals,\n",
+    "#     norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_vals, 50), vmax=np.percentile(img_vals, 99.9)),\n",
+    "#     cmap='terrain'\n",
+    "# )\n",
+    "# ax1.set(aspect='equal')"
    ]
   },
   {
@@ -196,7 +218,17 @@
     "           norm=matplotlib.colors.Normalize(vmin=img_min, vmax=img_max),\n",
     "           # norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_array, 50), vmax=np.percentile(img_array, 99.9)),\n",
     "           cmap='turbo',\n",
-    "           extent=(np.min(crop_x_axis), np.max(crop_x_axis), np.min(crop_y_axis), np.max(crop_y_axis)))"
+    "           extent=(np.min(crop_x_axis), np.max(crop_x_axis), np.min(crop_y_axis), np.max(crop_y_axis)))\n",
+    "\n",
+    "# Use pcolormesh instead of imshow for non-linear axes\n",
+    "# X, Y = np.meshgrid(crop_x_axis, crop_y_axis)\n",
+    "# ax1.pcolormesh(\n",
+    "#     X, Y,\n",
+    "#     crop_img,\n",
+    "#     norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_vals, 50), vmax=np.percentile(img_vals, 99.9)),\n",
+    "#     cmap='terrain'\n",
+    "# )\n",
+    "# ax1.set(aspect='equal')"
    ]
   },
   {
@@ -240,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
