speed upgrade, colormap from image

--- a/imgplot_to_array.ipynb
+++ b/imgplot_to_array.ipynb
@@ -22,7 +22,7 @@
     "from matplotlib.pyplot import subplots\n",
     "from matplotlib.colors import ListedColormap, BoundaryNorm\n",
     "import os\n",
-    "from ImagePlotDigitizer_funcs import color_to_value, generate_x_axis_map, generate_y_axis_map, crop_image\n",
+    "from ImagePlotDigitizer_funcs import colormap_from_image_line, color_to_value, generate_x_axis_map, generate_y_axis_map, generate_arb_y_axis_map, generate_arb_x_axis_map, crop_image, make_axes_linear\n",
     "%matplotlib widget"
    ]
   },
@@ -51,10 +51,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e926c467-7133-43f1-b2d5-0ff33beef0f6",
+   "metadata": {},
+   "source": [
+    "# Define colormap from image (Preferred method)\n",
+    "ideally use a colorbar if provided"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c875fb56-2430-40f9-92cc-fffa881bdad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 810 #center row or column of colorbar\n",
+    "start = 35 #start index (row or column)\n",
+    "stop = 483 #end index (row or column)\n",
+    "\n",
+    "#make sure to specify orientation ('vertical' or 'horizontal') and flip (use true for most vertical colorbars)\n",
+    "colormap = colormap_from_image_line(img_rgb, index, start, stop, width=15, normalize=True, orientation='vertical', flip=True, name='custom cmap')\n",
+    "colormap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dbd1dc18-0c0b-4df7-b4cf-5dfa54f89ea1",
    "metadata": {},
    "source": [
-    "# Define image colormap, edit if needed"
+    "## Define colormap from stock colormap (alternative method)\n",
+    "If you know what colormap was used to plot data this works well enough (commented out so its not accidentally ran)"
    ]
   },
   {
@@ -158,6 +184,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5583237f-c802-437e-a039-bd3037544650",
+   "metadata": {},
+   "source": [
+    "# Convert arbitrary (rectilinear) axis image to cartesian axis image\n",
+    "Use only if you have arbitrary axes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98ff1b2a-97b1-42a6-b0a5-f92bf5f01870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_vals, x_axis, y_axis = make_axes_linear(img_vals, x_axis, y_axis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57ea2107-d465-4ae0-867b-42089c6990d8",
    "metadata": {},
    "source": [
@@ -178,19 +223,7 @@
     "           norm=matplotlib.colors.Normalize(vmin=img_min, vmax=img_max),\n",
     "           # norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_array, 50), vmax=np.percentile(img_array, 99.9)),\n",
     "           cmap='turbo',\n",
-    "           extent=(np.min(x_axis), np.max(x_axis), np.min(y_axis), np.max(y_axis)))\n",
-    "\n",
-    "\n",
-    "# # For plotting non-linearly spaced x and y axes with pcolormesh:\n",
-    "# fig,ax1 = subplots(1,1)\n",
-    "# X, Y = np.meshgrid(x_axis, y_axis)\n",
-    "# ax1.pcolormesh(\n",
-    "#     X, Y,\n",
-    "#     img_vals,\n",
-    "#     norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_vals, 50), vmax=np.percentile(img_vals, 99.9)),\n",
-    "#     cmap='terrain'\n",
-    "# )\n",
-    "# ax1.set(aspect='equal')"
+    "           extent=(np.min(x_axis), np.max(x_axis), np.min(y_axis), np.max(y_axis)))"
    ]
   },
   {
@@ -218,17 +251,49 @@
     "           norm=matplotlib.colors.Normalize(vmin=img_min, vmax=img_max),\n",
     "           # norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_array, 50), vmax=np.percentile(img_array, 99.9)),\n",
     "           cmap='turbo',\n",
-    "           extent=(np.min(crop_x_axis), np.max(crop_x_axis), np.min(crop_y_axis), np.max(crop_y_axis)))\n",
+    "           extent=(np.min(crop_x_axis), np.max(crop_x_axis), np.min(crop_y_axis), np.max(crop_y_axis)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0090ad1-e532-46ff-92a6-38923599d6ae",
+   "metadata": {},
+   "source": [
+    "# Block out any labels (optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02313b1f-3e2e-4c45-b028-7b287eef10ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_left_corner = (0.9, 2.15)\n",
+    "bottom_right_corner = (1.75, 1.95)\n",
+    "fill_val = 20\n",
     "\n",
-    "# Use pcolormesh instead of imshow for non-linear axes\n",
-    "# X, Y = np.meshgrid(crop_x_axis, crop_y_axis)\n",
-    "# ax1.pcolormesh(\n",
-    "#     X, Y,\n",
-    "#     crop_img,\n",
-    "#     norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_vals, 50), vmax=np.percentile(img_vals, 99.9)),\n",
-    "#     cmap='terrain'\n",
-    "# )\n",
-    "# ax1.set(aspect='equal')"
+    "x1 = top_left_corner[0]\n",
+    "x2 = bottom_right_corner[0]\n",
+    "\n",
+    "y1 = top_left_corner[1]\n",
+    "y2 = bottom_right_corner[1]\n",
+    "\n",
+    "x_start_idx = np.argmin(np.abs(crop_x_axis-x1))\n",
+    "x_end_idx = np.argmin(np.abs(crop_x_axis-x2))\n",
+    "y_start_idx = np.argmin(np.abs(crop_y_axis-y1))\n",
+    "y_end_idx = np.argmin(np.abs(crop_y_axis-y2))\n",
+    "\n",
+    "crop_img[y_start_idx:y_end_idx, x_start_idx:x_end_idx] = fill_val\n",
+    "\n",
+    "fig,ax1 = subplots(1,1)\n",
+    "img_min = np.min(crop_img)\n",
+    "img_max = np.max(crop_img)\n",
+    "ax1.imshow(crop_img,\n",
+    "           norm=matplotlib.colors.Normalize(vmin=img_min, vmax=img_max),\n",
+    "           # norm=matplotlib.colors.LogNorm(vmin=np.percentile(img_array, 50), vmax=np.percentile(img_array, 99.9)),\n",
+    "           cmap='turbo',\n",
+    "           extent=(np.min(crop_x_axis), np.max(crop_x_axis), np.min(crop_y_axis), np.max(crop_y_axis)))"
    ]
   },
   {
@@ -252,7 +317,8 @@
     "img_name = 'F2_digitized'\n",
     "np.save(f'{save_dirr}/{img_name}_img.npy', crop_img)\n",
     "np.save(f'{save_dirr}/{img_name}_xaxis.npy', crop_x_axis)\n",
-    "np.save(f'{save_dirr}/{img_name}_yaxis.npy', crop_y_axis)"
+    "np.save(f'{save_dirr}/{img_name}_yaxis.npy', crop_y_axis)\n",
+    "plt.close('all')"
    ]
   }
  ],
@@ -272,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
